--- a/views/locations/edit.ejs
+++ b/views/locations/edit.ejs
@@ -1,33 +1,70 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>New Location</title>
-  </head>
-  <body>
+<% layout('layouts/boilerplate')%>
+<div class="row">
+  <h1 class="text-center">Edit Campground</h1>
+  <div class="col-6 offset-3">
     <form action="/locations/<%=location._id%>?_method=PUT" method="POST">
-      <div>
-        <label for="title">Title</label>
+      <div class="mb-3">
+        <label class="form-label" for="title">Title</label>
         <input
+          class="form-control"
           type="text"
           id="title"
           name="title"
-          value="<%=location.title%>"
+          value="<%=location.title %>"
         />
       </div>
-      <div>
-        <label for="location">Location</label>
+      <div class="mb-3">
+        <label class="form-label" for="location">Location</label>
         <input
+          class="form-control"
           type="text"
           id="location"
           name="city"
-          value="<%=location.city%>"
+          value="<%=location.city %>"
         />
       </div>
-      <button>Save</button>
-      <a href="/locations/<%=location._id%>">Back to location</a>
+      <div class="mb-3">
+        <label class="form-label" for="image">Image Url</label>
+        <input
+          class="form-control"
+          type="text"
+          id="image"
+          name="image"
+          value="<%=location.image %>"
+        />
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="price"> Price</label>
+        <div class="input-group">
+          <span class="input-group-text" id="price-label">$</span>
+          <input
+            type="text"
+            class="form-control"
+            id="price"
+            placeholder="0.00"
+            aria-label="price"
+            aria-describedby="price-label"
+            name="price"
+            value="<%=location.price %>"
+          />
+        </div>
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label" for="description">Description</label>
+        <textarea
+          class="form-control"
+          type="text"
+          id="description"
+          name="description"
+        >
+<%= location.description%></textarea
+        >
+      </div>
+      <div class="mb-3">
+        <button class="btn btn-info">Update</button>
+      </div>
     </form>
-  </body>
-</html>
+    <a href="/locations/<%= location._id%>">Back To Home</a>
+  </div>
+</div>
