--- a/views/locations/new.ejs
+++ b/views/locations/new.ejs
@@ -1,23 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>New Location</title>
-  </head>
-  <body>
+<% layout('layouts/boilerplate')%>
+
+<div class="row">
+  <h1 class="text-center">New Location</h1>
+  <div class="col-6 offset-3">
     <form action="/locations" method="POST">
-      <div>
-        <label for="title">Title</label>
-        <input type="text" id="title" name="title" />
+      <div class="mb-3">
+        <label class="form-label" for="title">Title</label>
+        <input class="form-control" type="text" id="title" name="title" />
       </div>
-      <div>
-        <label for="location">Location</label>
-        <input type="text" id="location" name="city" />
+      <div class="mb-3">
+        <label class="form-label" for="location">Location</label>
+        <input class="form-control" type="text" id="location" name="city" />
       </div>
-      <button>Add Location</button>
-      <a href="/locations">Back</a>
+      <div class="mb-3">
+        <label class="form-label" for="image">Image Url</label>
+        <input class="form-control" type="text" id="image" name="image" />
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="price">Campground Price</label>
+        <div class="input-group">
+          <span class="input-group-text" id="price-label">$</span>
+          <input
+            type="text"
+            class="form-control"
+            id="price"
+            placeholder="0.00"
+            aria-label="price"
+            aria-describedby="price-label"
+            name="price"
+          />
+        </div>
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label" for="description">Description</label>
+        <textarea
+          class="form-control"
+          type="text"
+          id="description"
+          name="description"
+        ></textarea>
+      </div>
+      <div class="mb-3">
+        <button class="btn btn-success">Add Location</button>
+      </div>
     </form>
-  </body>
-</html>
+    <a href="/locations">All Location</a>
+  </div>
+</div>
