--- a/views/locations/show.ejs
+++ b/views/locations/show.ejs
@@ -1,23 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%= location.title %></title>
-  </head>
-  <body>
-    <h1><%= location.title %></h1>
-    <h2><%= location.city %></h2>
-    <div>
-      <a href="/locations">Home</a>
-      <a href="/locations/<%=location._id%>/edit">Edit</a>
-      <form
-        action="/locations/<%= location._id %>?_method=DELETE"
-        method="POST"
-      >
-        <button>Delete</button>
-      </form>
+<% layout('layouts/boilerplate')%>
+<div class="row">
+  <div class="col-6 offset-3">
+    <div class="card mb-3">
+      <img src="<%= location.image%>" class="card-img-top" alt="..." />
+      <div class="card-body">
+        <h5 class="card-title"><%= location.title%></h5>
+        <p class="card-text"><%= location.description%></p>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item text-muted"><%= location.city%></li>
+        <li class="list-group-item">$<%= location.price%>/night</li>
+      </ul>
+      <div class="card-body">
+        <a
+          class="card-link btn btn-info"
+          href="/locations/<%=location._id%>/edit"
+          >Edit</a
+        >
+        <form
+          class="d-inline"
+          action="/locations/<%=location._id%>?_method=DELETE"
+          method="POST"
+        >
+          <button class="btn btn-danger">Delete</button>
+        </form>
+      </div>
+      <div class="card-footer text-muted">2 days ago</div>
     </div>
-  </body>
-</html>
+  </div>
+</div>
