--- a/views/locations/index.ejs
+++ b/views/locations/index.ejs
@@ -8,7 +8,7 @@
 <div class="card" mb-3>
   <div class="row">
     <div class="col-md-4">
-      <img class="img-fluid" alt="" src="<%=location.image%>" />
+      <img class="img-fluid w-100 h-90" alt="" src="<%=location.image%>" />
     </div>
     <div class="col-md-8">
       <div class="card-body">
