--- a/views/locations/new.ejs
+++ b/views/locations/new.ejs
@@ -3,18 +3,36 @@
 <div class="row">
   <h1 class="text-center">New Location</h1>
   <div class="col-6 offset-3">
-    <form action="/locations" method="POST">
+    <form action="/locations" method="POST" class="validated-form" novalidate>
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
-        <input class="form-control" type="text" id="title" name="title" />
+        <input
+          class="form-control"
+          type="text"
+          id="title"
+          name="title"
+          required
+        />
       </div>
       <div class="mb-3">
         <label class="form-label" for="location">Location</label>
-        <input class="form-control" type="text" id="location" name="city" />
+        <input
+          class="form-control"
+          type="text"
+          id="location"
+          name="city"
+          required
+        />
       </div>
       <div class="mb-3">
         <label class="form-label" for="image">Image Url</label>
-        <input class="form-control" type="text" id="image" name="image" />
+        <input
+          class="form-control"
+          type="text"
+          id="image"
+          name="image"
+          required
+        />
       </div>
       <div class="mb-3">
         <label class="form-label" for="price">Campground Price</label>
@@ -28,6 +46,7 @@
             aria-label="price"
             aria-describedby="price-label"
             name="price"
+            required
           />
         </div>
       </div>
@@ -39,6 +58,7 @@
           type="text"
           id="description"
           name="description"
+          required
         ></textarea>
       </div>
       <div class="mb-3">
