--- a/views/locations/index.ejs
+++ b/views/locations/index.ejs
@@ -1,27 +1,73 @@
 <% layout('layouts/boilerplate')%>
 
-<h1>All Locations</h1>
-<div>
-  <a href="/locations/new">Add Campground</a>
-</div>
-<% for (let location of locations){%>
-<div class="card" mb-3>
-  <div class="row">
-    <div class="col-md-4">
-      <img class="img-fluid w-100 h-90" alt="" src="<%=location.image%>" />
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title"><%= location.title %></h5>
-        <p class="card-text"><%= location.description %></p>
-        <p class="card-text">
-          <small class="text-muted"><%= location.city%></small>
-        </p>
-        <a class="btn btn-primary" href="/locations/<%=location._id%>"
-          >View <%=location.title%></a
-        >
+<div class="row">
+  <% for (let location of locations){%>
+  <div class="first">
+    <div class="second">
+      <div class="third">
+        <a href="/locations/<%=location._id%>" class="fourth"
+          ><div class="fifth"></div>
+          <div height="24.8rem" width="100%" class="sixth">
+            <div src="" class="seventh"></div>
+            <img
+              alt="Restaurant Card"
+              src="<%= location.image%>"
+              loading="lazy"
+              class="image"
+            />
+          </div>
+          <div class="eighth"></div> </a
+        ><a
+          href="/beirut/swiss-butter-gemmayze-beirut-district/info"
+          class="ninth"
+          ><div class="ten">
+            <h4 class="eleven"><%=location.title%></h4>
+            <div class="twelve">
+              <div class="thirteen">
+                <div
+                  color="#267E3E"
+                  height="2rem"
+                  width="2.6rem"
+                  font-size="1.3rem"
+                  class="fourteen"
+                >
+                  <div class="fifteen">
+                    <div class="sixteen">
+                      <div class="seventeen">4.4</div>
+                      <div class="eighteen">
+                        <i class="nineteen" color="#FFFFFF"
+                          ><svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            fill="#FFFFFF"
+                            width="0.8rem"
+                            height="0.8rem"
+                            viewBox="0 0 20 20"
+                            aria-labelledby="icon-svg-title- icon-svg-desc-"
+                            role="img"
+                            class="sc-rbbb40-0 fauQLv"
+                          >
+                            <title>star-fill</title>
+                            <path
+                              d="M6.76 6.8l-6.38 0.96c-0.22 0.040-0.38 0.22-0.38 0.44 0 0.12 0.040 0.24 0.12 0.32v0l4.64 4.76-1.1 6.66c0 0.020 0 0.040 0 0.080 0 0.24 0.2 0.44 0.44 0.44 0.1 0 0.16-0.020 0.24-0.060v0l5.7-3.12 5.68 3.12c0.060 0.040 0.14 0.060 0.22 0.060 0.24 0 0.44-0.2 0.44-0.44 0-0.040 0-0.060 0-0.080v0l-1.1-6.66 4.64-4.76c0.080-0.080 0.12-0.2 0.12-0.32 0-0.22-0.16-0.4-0.36-0.44h-0.020l-6.38-0.96-2.96-6.18c-0.060-0.12-0.18-0.2-0.32-0.2s-0.26 0.080-0.32 0.2v0z"
+                            ></path></svg
+                        ></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="twenty">
+            <p class="twentyo">French, Steak</p>
+          </div>
+          <a href="/locations/<%=location._id%>" class="view"
+            >View <%= location.title %></a
+          >
+          <span class="twentyf"> </span
+        ></a>
       </div>
     </div>
   </div>
+  <% }%>
 </div>
-<% }%>
