--- a/views/locations/category.ejs
+++ b/views/locations/category.ejs
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Jordanian Experience</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <link rel="stylesheet" href="stylesheets/hello.css" />
     <link rel="stylesheet" href="stylesheets/home.css" />
-    <link rel="stylesheet" href="stylesheets/index.css" />
     <!-- font awesome -->
     <script
       src="https://kit.fontawesome.com/dbed6b6114.js"
@@ -16,7 +15,6 @@
   </head>
 
   <body>
-    <%- include('../partials/navbar') %>
     <div class="products">
       <div class="container">
         <h1 class="lg-title">Our Locations</h1>
@@ -68,16 +66,19 @@
 
     <div class="product-collection">
       <div class="container">
-        <h1 class="lg-title">Categories</h1>
         <div class="product-collection-wrapper">
           <!-- product col left -->
-          <div class="product-col-left flex" id="categories">
+          <div class="product-col-left flex">
             <div class="product-col-content">
-              <h2 class="md-title">Resturants</h2>
-              <p class="text-light"></p>
-              <a href="/locations/resturants" class="btn-dark"
-                >View Resturants</a
-              >
+              <h2 class="sm-title">men's shoes</h2>
+              <h2 class="md-title">men's collection</h2>
+              <p class="text-light">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Molestiae consequatur facilis eligendi quibusdam voluptatibus
+                exercitationem autem voluptatum, beatae architecto odit,
+                quisquam repellat. Deleniti, architecto ab.
+              </p>
+              <button type="button" class="btn-dark">Shop now</button>
             </div>
           </div>
 
@@ -85,9 +86,15 @@
           <div class="product-col-right">
             <div class="product-col-r-top flex">
               <div class="product-col-content">
-                <h2 class="md-title">Hotels</h2>
-                <p class="text-light"></p>
-                <a href="/locations/hotels" class="btn-dark">View Hotels</a>
+                <h2 class="sm-title">women's dresses</h2>
+                <h2 class="md-title">women's collection</h2>
+                <p class="text-light">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Molestiae consequatur facilis eligendi quibusdam voluptatibus
+                  exercitationem autem voluptatum, beatae architecto odit,
+                  quisquam repellat. Deleniti, architecto ab.
+                </p>
+                <button type="button" class="btn-dark">Shop now</button>
               </div>
             </div>
 
@@ -95,19 +102,29 @@
               <!-- left -->
               <div class="flex">
                 <div class="product-col-content">
-                  <h2 class="md-title">Things To Do</h2>
-                  <p class="text-light"></p>
-                  <a href="/locations/things" class="btn-dark"
-                    >View Things To Do</a
-                  >
+                  <h2 class="sm-title">summer sale</h2>
+                  <h2 class="md-title">Extra 50% Off</h2>
+                  <p class="text-light">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Molestiae consequatur facilis eligendi quibusdam
+                    voluptatibus exercitationem autem voluptatum, beatae
+                    architecto odit, quisquam repellat. Deleniti, architecto ab.
+                  </p>
+                  <button type="button" class="btn-dark">Shop now</button>
                 </div>
               </div>
               <!-- right -->
               <div class="flex">
                 <div class="product-col-content">
-                  <h2 class="md-title">Top Rated</h2>
-                  <p class="text-light"></p>
-                  <a href="/locations/top" class="btn-dark">View Top Rated</a>
+                  <h2 class="sm-title">shoes</h2>
+                  <h2 class="md-title">best sellers</h2>
+                  <p class="text-light">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Molestiae consequatur facilis eligendi quibusdam
+                    voluptatibus exercitationem autem voluptatum, beatae
+                    architecto odit, quisquam repellat. Deleniti, architecto ab.
+                  </p>
+                  <button type="button" class="btn-dark">Shop now</button>
                 </div>
               </div>
             </div>
