--- a/views/locations/new.ejs
+++ b/views/locations/new.ejs
@@ -35,6 +35,16 @@
         />
       </div>
       <div class="mb-3">
+        <label class="form-label" for="category">Category</label>
+        <input
+          class="form-control"
+          type="text"
+          id="category"
+          name="category"
+          required
+        />
+      </div>
+      <div class="mb-3">
         <label class="form-label" for="price">Campground Price</label>
         <div class="input-group">
           <span class="input-group-text" id="price-label">$</span>
